# trinity_agent_system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
docs/: README.md
src/: __init__.py  config.py  main.py  schemas.py
src/agents/: __init__.py  micro_ceo.py  ouroboros.py  polymath.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  base_agent.py  llm_factory.py  memory_manager.py  task_engine.py  tool_registry.py
src/tools/: __init__.py  browser_tool.py  search_tool.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  test_agents.py
